# demo_kedro

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prefectignore  CODEOWNERS  DESCRIPTION  LICENSE  catsinfrastructure.py  config_sandbox.json  makefile  prefect_flow_file.py  prefect_initial_deploy.sh  prefect_redeploy.sh  project_setup.sh  pyproject.toml  readme.md  send_email.R  send_email.py
.github/workflows/: docker-build-push-cats.yaml  precommit-pr-check.yaml  precommit-push-check.yaml
conf/base/: parameters.yml
data/01_raw/: data.csv
data/07_model_output/: .gitignore
docker/: Dockerfile_setup  config.env  generate_dockerfile.sh  run_python.sh  run_r.sh  utils.sh
renv/: activate.R
src/python/: __init__.py  __main__.py  readme.md  settings.py
src/python/pipelines/data_processing/: nodes.py  pipeline.py
src/python/pipelines/data_science/: pipeline.py
src/r/pipelines/: hooks.R  readme.md
src/r/pipelines/example/: pipeline.R
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
